--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    font: Roboto;
+    font-family: Arial, Helvetica, sans-serif;
     background-image: url(images/4907157.jpg);
     margin: 0;
     display: flex;
@@ -20,6 +20,7 @@ body {
     overflow: hidden;
     height: 100%;
     z-index: 2;
+    border-bottom:5px solid #006e42b4;
 }
 
 .top {
@@ -61,8 +62,12 @@ button:hover {
 }
 
 .title>h1 {
+    color: #006e42b4;
+    text-transform: uppercase;
     font-size: 50px;
     white-space: nowrap;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    /*text-shadow: 0px 0px 5px #006e42b4;*/
 
 
 }
@@ -83,6 +88,10 @@ button:hover {
     margin-bottom: 20px;
 
 }
+.title-p
+{
+    font-size: 26px;
+}
 
 .alfa-image>img {
 
@@ -102,6 +111,7 @@ button:hover {
     white-space: nowrap;
     text-align: center;
     margin-bottom: 20px;
+    padding: 20px;
 
 
 }
@@ -135,7 +145,7 @@ h2 {
 
 .best-sellers {
 
-    margin: 50px 0;
+    margin: 0;
     padding: 20px 0;
     display: flex;
     justify-content: space-around;
@@ -145,6 +155,8 @@ h2 {
     overflow: hidden;
     height: 100%;
     z-index: 2;
+    border-top: 5px solid #ab1a2ba9;
+    border-bottom: 5px solid #ab1a2ba9;
 }
 
 .item>p {
@@ -159,6 +171,7 @@ h2 {
 
 .item-img {
     transition: 1s ease;
+    border: 3px solid #ab1a2ba9;
 }
 
 .item-img:hover {
@@ -166,4 +179,35 @@ h2 {
     -ms-transform: scale(1.2);
     transform: scale(1.2);
     transition: 1s ease;
+}
+
+.promo
+{
+    display: flex;
+    justify-content: center;
+    max-height: 200px;
+    padding: 20px;
+
+}
+
+.box
+{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    max-height: 100px;
+    padding: 10px;
+    background-color: #ab1a2ba9;
+    align-items: center;
+    border: 5px solid #006e42b4;
+}
+
+
+.footer
+{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: #006e42b4;
+    border-top: 5px solid #ab1a2ba9;
 }
